[aliases]
test=pytest --addopts='--boxed --verbose'

[tool:pytest]
addopts = --verbose --boxed tests

[metadata]
name = tangods-raspberry_pi
description = Tango device server for the Raspberry Pi.
author = J. Sundberg, Antoine Dupre, Juliano Murari
author_email = jens.sundberg@maxiv.lu.se, antoine.dupre@maxiv.lu.se, juliano.murari@maxiv.lu.se
license = GPLv3
url = http://www.maxiv.lu.se

[options]
packages = find:
install_requires =
    setuptools
    pytango>=9.2.1
    requests

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    setuptools_scm